<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <modules>
        <module>lambda-expression</module>
        <module>stream-api</module>
        <module>functional-interface</module>
    </modules>

    <parent>
        <groupId>com.suprun</groupId>
        <artifactId>java-development</artifactId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <artifactId>java8</artifactId>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
    </properties>

</project>
